--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "gbcs-parser",
-  "version": "1.0.0",
-  "description": "",
+  "name": "@smartdcc/gbcs-parser",
+  "version": "0.1",
+  "description": "GBCS parser based on henrygiraldo.github.io",
+  "homepage": "https://github.com/SmartDCCInnovation/gbcs-parser",
   "main": "index.ts",
   "dependencies": {
     "typescript": "^4.7.4"
@@ -21,6 +22,9 @@
     "start": "ts-node src/index.ts",
     "build": "tsc"
   },
-  "author": "",
-  "license": "ISC"
+  "author": {
+    "name": "Karim Kanso",
+    "email": "Karim.Kanso@smartdcc.co.uk"
+  },
+  "license": "GPL-3.0-or-later"
 }
