--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -70,6 +70,20 @@ jobs:
       if: github.event_name == 'pull_request'
       run: npm run lint
 
+  build:
+    name: Compile TypeScript
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up NodeJS ${{ matrix.node }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: 16
+    - name: Install dependencies
+      run: npm ci
+    - name: Build
+      run: npm run build
+
   test:
     name: Run Tests on NodeJS ${{ matrix.node }}
     runs-on: ubuntu-latest
@@ -108,6 +122,7 @@ jobs:
     needs:
     - format
     - lint
+    - build
     - test
     runs-on: ubuntu-latest
     steps:
