--- a/package.json
+++ b/package.json
@@ -19,16 +19,17 @@
     "@types/glob": "^8.0.0",
     "@types/jest": "^29.0.0",
     "@types/node": "^20.1.1",
-    "@typescript-eslint/eslint-plugin": "^8.0.0",
-    "@typescript-eslint/parser": "^8.0.0",
     "del-cli": "^5.0.0",
     "eslint": "^9.9.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "glob": "^11.0.0",
+    "globals": "^15.9.0",
     "prettier": "^3.0.0",
     "ts-jest": "^29.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.2",
+    "typescript-eslint": "^8.2.0"
   },
   "scripts": {
     "test": "jest",
