--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -93,7 +93,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: [ 16, 18, 20, 22 ]
+        node: [ 16, 18, 20, 22, 24 ]
     steps:
     - uses: actions/checkout@v4
     - name: Install reviewdog
